pxc/tests/test_11_foreach/fe_arr5.px

import io;

function void test1(vector{string} a)
{
  foreach (size_t i, string& s : a) { // error
    s = size_t_to_string(i);
  }
  foreach (size_t i, string s : a) {
    io::println(a[i]);
  }
}

vector{string} a.resize(100);
test1(a);
